# gamayun_v2

./: .gitignore  Cargo.toml  LICENSE
docker/: dev.docker-compose.yaml
gamayun_main/: Cargo.toml
gamayun_main/src/: main.rs  request_handling_logic.rs
gamayun_main/src/config/: app_config.rs  job_config.rs  mod.rs
gamayun_main/src/grpc/: mod.rs  result_collecting_service.rs
gamayun_main/src/grpc/result_collecting_service/: common_utils.rs  impl_empty_result_handling.rs  impl_error_handling.rs  impl_result_handling.rs  impl_result_maps_only.rs  mod.rs
gamayun_main/src/http/: app_config_reload_handler.rs  mod.rs  routes.rs  version_retriever.rs
gamayun_main/src/init/: mod.rs  mongo.rs  notification_sender.rs  observability.rs
gamayun_main/src/job_scheduling/: config_reload.rs  mod.rs  scheduled_job_tracking_service.rs
gamayun_main/src/notification/: mod.rs
gamayun_main/src/notification/composite_notification_sender/: inner.rs  mod.rs
gamayun_main/src/notification/mail/: mod.rs  sendgrid_notification_sender.rs
protos/: Cargo.toml  build.rs
protos/proto/: gamayun_result.proto  result_reporting_service.proto
protos/src/: lib.rs
src/: init.rs  main.rs
test_config/: app_config.toml  dummy.config.toml  runner.py
