[package]
name = "gamayun"
version = "0.3.0"
edition = "2021"

[dependencies]
#actix
actix-web = "4.9"

# async
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3"
async-trait = "0.1"


# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.27.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry = "0.26.0"
opentelemetry-otlp = "0.26.0"

# toml
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

# config
config = { version = "0.14", features = ["toml"] }

#scheduling
grizzly_scheduler = "0.2.0"
chrono = "0.4.38"

# grpc
tonic = { version = "0.12.3", features = ["transport"] }

# mongo
mongodb = "3.1.0"

#other
anyhow = "1.0"
dotenv = "0.15.0"

# local dependencies
protos = { path = "../protos" }
tracing-futures = "0.2.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4"] }
