[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
tonic-build = "0.12.3"
